--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "gulp": "^3.9.1",
     "lodash": "^4.17.2",
     "sse": "0.0.6",
-    "vinyl-source-stream": "^1.1.0",
-    "ws": "^1.1.1"
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0"
